--- a/config.yaml
+++ b/config.yaml
@@ -17,89 +17,4 @@ settings:
 monitors:
   - id: G36
     name: G36
-    url: 'https://elated-ruddy-dive.glitch.me'
-
-  - id: G37
-    name: G37
-    url: 'https://debonair-fancy-seaplane.glitch.me'
-
-  - id: G38
-    name: G38
-    url: 'https://regular-subsequent-amount.glitch.me'
-
-  - id: G39
-    name: G39
-    url: 'https://famous-tin-rutabaga.glitch.me'
-
-  - id: G40
-    name: G40
-    url: 'https://knowing-mango-hunter.glitch.me'
-
-  - id: G41
-    name: G41
-    url: 'https://zany-endurable-poet.glitch.me'
-
-  - id: G42
-    name: G42
-    url: 'https://honorable-iris-chauffeur.glitch.me'
-
-  - id: G43
-    name: G43
-    url: 'https://tin-lateral-falcon.glitch.me'
-
-  - id: G44
-    name: G44
-    url: 'https://eastern-wind-amaryllis.glitch.me'
-
-  - id: G45
-    name: G45
-    url: 'https://actually-brass-beef.glitch.me'
-
-  - id: G46
-    name: G46
-    url: 'https://emphasized-elegant-flamingo.glitch.me'
-
-  - id: G47
-    name: G47
-    url: 'https://cherry-grave-patella.glitch.me'
-
-  - id: G48
-    name: G48
-    url: 'https://innovative-clever-periodical.glitch.me'
-
-  - id: G49
-    name: G49
-    url: 'https://holy-feline-spoonbill.glitch.me'
-
-  - id: G50
-    name: G50
-    url: 'https://checkered-square-knave.glitch.me'
-
-  - id: G51
-    name: G51
-    url: 'https://heavenly-overjoyed-sawfish.glitch.me'
-
-  - id: G52
-    name: G52
-    url: 'https://neat-fish-insect.glitch.me'
-
-  - id: G53
-    name: G53
-    url: 'https://like-polar-innocent.glitch.me'
-
-  - id: G54
-    name: G54
-    url: 'https://economic-bittersweet-chemistry.glitch.me'
-
-  - id: G55
-    name: G55
-    url: 'https://ginger-muddy-tote.glitch.me'
-
-  - id: G56
-    name: G56
-    url: 'https://uttermost-cream-house.glitch.me'
-
-  - id: G57
-    name: G57
-    url: 'https://chain-holy-frill.glitch.me'
-
+    url: 'https://glitch.me'
